vte_terminal_set_scroll_on_keystroke emits notification for wrong property
While writing a new patch for #234 (closed) I noticed that vte_terminal_set_scroll_on_keystroke()
emits a notification for PROP_SCROLL_ON_OUTPUT
instead of PROP_SCROLL_ON_KEYSTROKE
. I'll correct this too in my patch, but I thought I'd better document it separately.