widget: Notify correct property when setting the scroll-on-keystroke

Fixes: https://gitlab.gnome.org/GNOME/vte/-/issues/238